_sass/include/_layout.scss: fixing the menu on small screens.

--- a/_sass/include/_layout.scss
+++ b/_sass/include/_layout.scss
@@ -53,29 +53,28 @@
 .site-nav {
     float: right;
     line-height: $base-line-height * $base-font-size * 2.5;
-    
-    .nav-trigger {
+
+    .nav-trigger,
+	.menu-icon {
         display: none;
     }
-    
-    .menu-icon {
-        display: none;
-    }
+
     &-link {
+		display: inline-block;
         color: $header-menu-color;
         line-height: $base-line-height;
         padding: 3px 0;
-        
+
         &:hover {
             color: darken($header-menu-color, 10%);
             text-decoration: none;
         }
-        
-        // Active state 
+
+        // Active state
         &.active {
             border-bottom: 3px solid $header-menu-active-border-color;
         }
-    
+
         // Gaps between nav items, but not on the last one
         &:not(:last-child) {
             margin-right: 20px;
@@ -86,10 +85,9 @@
         position: absolute;
         top: 9px;
         right: $spacing-unit / 2;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
+		background-color: $front-color;
+	    border: solid 1px $front-border-color;
+        border-radius: 4px;
         label[for="nav-trigger"] {
             display: block;
             float: right;
@@ -116,21 +114,25 @@
         }
         input:checked ~ .trigger {
             display: block;
+			margin: 0 1em;
             padding-bottom: 5px;
         }
-        .page-link {
-            display: block;
-            padding: 5px 10px;
+        &-link {
+			display: block;
+			width: 100%;
+			text-align: center;
+			padding: 5px 10px;
+			margin: .2em 0;
             color: $text-color;
             &:hover {
                 color: $text-color;
-                text-decoration: underline;
             }
-            &:not(:last-child) {
-                margin-right: 0;
-            }
-            margin-left: 20px;
-        }
+			&.active {
+				color: $header-menu-color;
+				background: $header-menu-active-border-color;
+				border-bottom: 0;
+			}
+		}
     }
 }
 
